Commit changes: - Added Spring support for implementing auto-transactions; - Added logging using slf4j + log4j; - All exceptions and errors related to the operation of the program have been processed; - Instructions for each annotation and method are provided; - Exceptions were processed in the project according to the SonarLint revision;